# GraphicsEngine

./: CMakeLists.txt  README.md  main.cpp
Core/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  MeshComponent.cpp  MeshComponent.h  Object.cpp  Object.h  Scene.cpp  Scene.h
RenderSystem/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderingSystem.cpp  RenderingSystem.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
RenderSystem/stb/: stb.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
